@startuml

@startuml

class "DualConnection#Builder" as builder
class DualConnection {
    executeXYZ()
}
builder :  Connection build()

interface CircuitBreaker {
    boolean canCreateDualConnection()
}

interface ConnectionProvider {
  Connection getMainConnection()
}

interface DualCall {
    callReplica(final SqlCall<T> call)
    T callMain(final SqlCall<T> call)
}

DualCall *-- CircuitBreaker : contains
interface Connection
DualConnection --|> Connection

builder::build --> CircuitBreaker::canCreateDualConnection : can create dual connection?
CircuitBreaker::canCreateDualConnection --> ConnectionProvider::getMainConnection : No
CircuitBreaker::canCreateDualConnection --> DualConnection : Yes

DualConnection::executeXYZ --> DualCall : handle SQL call

@enduml


@enduml
